# formal-circuits-gpt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTONOMOUS_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT_v5.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_FINAL.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROGRESSIVE_QUALITY_GATES_COMPLETION_REPORT.md  PROJECT_CHARTER.md  README.md  SECURITY.md  SETUP_REQUIRED.md  debug_full_parser.py  debug_parser.py  debug_regex.py  docker-compose.yml  pr_body.md  pr_title.txt  pyproject.toml  test_basic_functionality.py  test_complete_sdlc.py  test_comprehensive_autonomous_validation.py  test_comprehensive_quality_gates.py  test_enhanced_functionality.py  test_enhanced_security.py  test_final_comprehensive_validation.py  (+17 more)
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: project-metrics.json  pull_request_template.md
.terragon/: config.yaml  value-metrics.json
autonomous_research_results/: executive_summary_20250826_191431.txt  terragon_autonomous_research_report_20250826_191413.json  terragon_autonomous_research_report_20250826_191431.json
benchmarks/: config.json
docs/: ARCHITECTURE.md  AUTONOMOUS_SDLC.md  DEVELOPMENT.md  ROADMAP.md
examples/: counter.v  (+5 more)
(+188 files in other folders)
